basics of classes written

--- a/OOPS/classes.ipynb
+++ b/OOPS/classes.ipynb
@@ -1,12 +1,213 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classes\n",
+    "\n",
+    "* - A Class is basically a blueprint for creating instances. \n",
+    "\n",
+    "Syntax:\n",
+    "`class NameOfClass():`\n",
+    " \n",
+    "``` def__init__(self, param1, param2):\n",
+    " self.param1 = param1\n",
+    " self.param2 = param2\n",
+    "\n",
+    " def some_method(self):\n",
+    " # perform some action\n",
+    " print(self.param1)```\n",
+    "\n",
+    "When a function is inside class, it is called method\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import turtle"
+    "class Dog():\n",
+    "    # class object attribute, same for any instance of a class\n",
+    "    \n",
+    "    species = 'mammal'\n",
+    "    \n",
+    "    def __init__(self, breed, name, spots):\n",
+    "        self.breed:str = breed\n",
+    "        self.name:str=name\n",
+    "        \n",
+    "        # expect boolean value\n",
+    "        self.spots:bool = spots\n",
+    "        \n",
+    "    # operations or actions \n",
+    "    def bark(self, id:int):\n",
+    "        print(f\"WOOF!!, my name is {self.name}, and my id no is {id}\") # if a method has its own attribute, then self keyword is not required"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Dog at 0x210c78c9390>"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dog = Dog(breed='Golden Retriever', name='Ninja', spots=False)\n",
+    "my_dog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Golden Retriever'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dog.breed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ninja'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dog.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dog.spots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mammal'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dog.species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WOOF!!, my name is Ninja, and my id no is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dog.bark(id=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Circle():\n",
+    "    # Class object attribute\n",
+    "    pi = 3.14\n",
+    "    \n",
+    "    def __init__(self, radius=1) -> None:\n",
+    "        self.radius = radius\n",
+    "    \n",
+    "    def area(self):\n",
+    "        return f'The area of circle is {self.pi * (self.radius * self.radius)}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_circle = Circle(radius=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The area of circle is 7850.0'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_circle.area()"
    ]
   },
   {
@@ -14,47 +215,542 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classes\n",
-    "\n",
-    "* - A Class is basically a blueprint for creating instances. "
+    "## Inheritance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal():\n",
+    "    \n",
+    "    def __init__(self) -> None:\n",
+    "        print('Animal Created')\n",
+    "        \n",
+    "    def who_am_i(self):\n",
+    "        print('I am an Animal')\n",
+    "        \n",
+    "    def eat(self):\n",
+    "        print('I am eating')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal Created\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_animal = Animal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog(Animal):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        Animal.__init__(self)\n",
+    "        print('Dog Created')\n",
+    "        \n",
+    "    def bark(self):\n",
+    "        print(f'Woof!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal Created\n",
+      "Dog Created\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dog = Dog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am an Animal\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dog.who_am_i()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Polymorphism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog():\n",
+    "    def __init__(self, name) -> None:\n",
+    "        self.name=name\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        return self.name + ' says woof'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cat():\n",
+    "    def __init__(self, name) -> None:\n",
+    "        self.name=name\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        return self.name + ' says meow'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "niko = Dog(name='niko')\n",
+    "felix = Cat(name='felix')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "niko says woof\n",
+      "felix says meow\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(niko.speak())\n",
+    "print(felix.speak())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Dog'>\n",
+      "niko says woof\n",
+      "<class '__main__.Cat'>\n",
+      "felix says meow\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pet in [niko, felix]:\n",
+    "    print(type(pet))\n",
+    "    print(pet.speak())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pet_speak(pet):\n",
+    "    return pet.speak()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "felix says meow\n",
+      "niko says woof\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pet_speak(felix))\n",
+    "print(pet_speak(niko))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal():\n",
+    "    def __init__(self, name) -> None:\n",
+    "        self.name=name\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        raise BaseClassError('To be used as base class for others')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog(Animal):\n",
+    "    def __init__(self, name, breed) -> None:\n",
+    "        super().__init__(name)\n",
+    "        self.breed=breed\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        print(f'Woof! my name is {self.name}, I am {self.breed}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tony = Dog(name='tony', breed='Golden Retriever')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof! my name is tony, I am Golden Retriever\n"
+     ]
+    }
+   ],
+   "source": [
+    "tony.speak()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Special (Magic/Dunder Methods)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Book():\n",
+    "    def __init__(self, title, author, pages) -> None:\n",
+    "        self.title=title\n",
+    "        self.author=author\n",
+    "        self.pages=pages\n",
+    "        \n",
+    "    def __str__(self) -> str:\n",
+    "        return f'{self.title} by {self.author}'\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return self.pages\n",
+    "    \n",
+    "    def __del__(self):\n",
+    "        print('Book Object is deleted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book = Book(title='Harry Potter', author='JK Rowling', pages=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<turtle.Turtle at 0x1f161541b40>"
+       "'Harry Potter by JK Rowling'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cat = turtle.Turtle()\n",
-    "cat"
+    "str(book)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(book)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Book Object is deleted\n"
+     ]
+    }
+   ],
+   "source": [
+    "del(book)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OOPS Examples"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Writing code for finding distance and slape given coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat.circle(radius=10)"
+    "import math\n",
+    "\n",
+    "class Line:\n",
+    "    def __init__(self, coo1, coo2) :\n",
+    "        self.coo1=coo1\n",
+    "        self.coo2=coo2\n",
+    "        \n",
+    "    def distance(self):\n",
+    "        d = round(math.sqrt((self.coo2[0] - self.coo1[0])**2 + (self.coo2[1] - self.coo1[1])**2), 2)\n",
+    "        return d\n",
+    "    \n",
+    "    def slope(self):\n",
+    "        m = (self.coo2[1] - self.coo1[1])/(self.coo2[0] - self.coo1[0])\n",
+    "        return m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "coordinates1=(1,2)\n",
+    "coordinates2=(3,4)\n",
+    "\n",
+    "\n",
+    "my_line = Line(coo1=coordinates1, coo2=coordinates2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_line.slope()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.83"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_line.distance()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code for finding volume of cylinder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Shape:\n",
+    "    def __init__(self, height) -> None:\n",
+    "        self.height = height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cylinder(Shape):\n",
+    "    pi = 3.14\n",
+    "    \n",
+    "    def __init__(self, height, radius) -> None:\n",
+    "        super().__init__(height)\n",
+    "        self.radius=radius\n",
+    "        \n",
+    "    def volume(self):\n",
+    "        v = self.pi * (self.radius)**2 * self.height\n",
+    "        return v\n",
+    "    \n",
+    "    def surface_area(self):\n",
+    "        surface_area = 2 * self.pi * self.radius * (self.radius + self.height)\n",
+    "        return surface_area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_clinder = Cylinder(height=5, radius=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "141.3"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_clinder.volume()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150.72"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_clinder.surface_area()"
+   ]
   },
   {
    "cell_type": "code",
