bank account code added

--- a/OOPS/classes.ipynb
+++ b/OOPS/classes.ipynb
@@ -683,14 +683,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Cylinder(Shape):\n",
     "    pi = 3.14\n",
     "    \n",
-    "    def __init__(self, height, radius) -> None:\n",
+    "    def __init__(self, height, radius):\n",
     "        super().__init__(height)\n",
     "        self.radius=radius\n",
     "        \n",
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "141.3"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -743,13 +743,145 @@
        "150.72"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "my_clinder.surface_area()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code for Bank Account"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BankAccount():\n",
+    "    \n",
+    "    def __init__(self, owner, balance=0) -> None:\n",
+    "        self.owner=owner\n",
+    "        self.balance=balance\n",
+    "        \n",
+    "    def deposit(self, amount):\n",
+    "        self.balance=self.balance+amount\n",
+    "        print(f'The amount {amount} has been depsoited and your amount is {self.balance}')\n",
+    "        \n",
+    "    def withdraw(self, amount):\n",
+    "        if amount > self.balance:\n",
+    "            print('You have insufficent funds in your account')\n",
+    "        else:\n",
+    "            self.balance=self.balance-amount\n",
+    "            print(f'You have just withdrew {amount} and your balance is {self.balance}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saquib = BankAccount(owner='Saquib Mohiuddin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saquib.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount 5000 has been depsoited and your amount is 5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "saquib.deposit(amount=5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5000"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saquib.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount 6000 has been depsoited and your amount is 11000\n"
+     ]
+    }
+   ],
+   "source": [
+    "saquib.deposit(amount=6000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have insufficent funds in your account\n"
+     ]
+    }
+   ],
+   "source": [
+    "saquib.withdraw(amount=12000)"
    ]
   },
   {
