--- a/OOPS/classes.ipynb
+++ b/OOPS/classes.ipynb
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,20 +773,20 @@
     "        self.balance=balance\n",
     "        \n",
     "    def deposit(self, amount):\n",
-    "        self.balance=self.balance+amount\n",
+    "        self.balance+=amount\n",
     "        print(f'The amount {amount} has been depsoited and your amount is {self.balance}')\n",
     "        \n",
     "    def withdraw(self, amount):\n",
     "        if amount > self.balance:\n",
     "            print('You have insufficent funds in your account')\n",
     "        else:\n",
-    "            self.balance=self.balance-amount\n",
+    "            self.balance-=amount\n",
     "            print(f'You have just withdrew {amount} and your balance is {self.balance}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
        "0"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "5000"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -869,19 +869,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You have insufficent funds in your account\n"
+      "You have just withdrew 11000 and your balance is 0\n"
      ]
     }
    ],
    "source": [
-    "saquib.withdraw(amount=12000)"
+    "saquib.withdraw(amount=11000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saquib.balance"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## @classmethod and @staticmethod#\n",
+    "* The class method can be used to call functions from class without instatiating class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PlayerCharacter:\n",
+    "    membdership=True\n",
+    "    \n",
+    "    def __init__(self, name, age):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "        \n",
+    "    def shout(self):\n",
+    "        print(f'My name is {self.name}')\n",
+    "        \n",
+    "    @classmethod\n",
+    "    def add_num(cls, num1, num2):\n",
+    "        return cls('Saquib', num1 + num2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saquib = PlayerCharacter(name='Saquib', age=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Saquib\n"
+     ]
+    }
+   ],
+   "source": [
+    "saquib.shout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saquib.age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.PlayerCharacter at 0x24f9d99d5e0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PlayerCharacter.add_num(10,15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saquib1 = PlayerCharacter.add_num(10, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "saquib1.age"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "@staticmethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PlayerCharacter:\n",
+    "    membdership=True\n",
+    "    \n",
+    "    def __init__(self, name, age):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "        \n",
+    "    def shout(self):\n",
+    "        print(f'My name is {self.name}')\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def add_num(num1, num2):\n",
+    "        return num1 + num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saquib = PlayerCharacter(name='Saquib', age=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Saquib\n"
+     ]
+    }
+   ],
+   "source": [
+    "saquib.shout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PlayerCharacter.add_num(10,15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [i for i in range(0,10)]\n",
+    "x"
    ]
   },
   {
@@ -908,7 +1149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
