--- a/algorithms/algorithms.ipynb
+++ b/algorithms/algorithms.ipynb
@@ -1,16 +1,91 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [21, 23, 20, 18, 4, 19]\n",
+    "len(x)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insert Method\n",
+    "* insert(A, j) -> A = array, j = index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insert Sort\n",
+    "* start with first element\n",
+    "* Divide the elements into two parts, perform sort for the first part\n",
+    "* extend the sorted region by moving 1 position.\n",
+    "* Find where the elements needs to go.\n",
+    "* Perform insertion and shift the elements over. \n",
+    "* repeat steps for all elements. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_sort()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "lab",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
