example problem given

--- a/algorithms/algorithms.ipynb
+++ b/algorithms/algorithms.ipynb
@@ -127,7 +127,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insert_sort()"
+    "def foo(n):\n",
+    "    sum = 0 # time cost of assignment = c1\n",
+    "    # assume initialization of i to 0 at the start of loop has 0 cost\n",
+    "    for i in range(n): # cost for each (increment i and check if in range) = c2 \n",
+    "        sum = sum + i * i # cost of addition = c3, \n",
+    "        # cost of multiplication = c4 and \n",
+    "        # cost of assignment = c1\n",
+    "    return sum # cost of return = c5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall time cost of calling the \"foo\" function in terms of n, C1, C2, C3, c4 and c5 ?\n",
+    "(n+1)∗c1+n∗(c2+c3+c4)+c5"
    ]
   }
  ],
